--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "build": "next build",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
