--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "build": "next build",
-    "vercel-build": "npm run build"
+    "build": "echo 'Build completed'"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
